// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering does not filter when filterNpmIncompatibleProperties is false 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "email=test@example.com",
  "hoist=false",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering filters out deprecated npm properties 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "; UNSUPPORTED BY NPM: email=test@example.com",
  "; UNSUPPORTED BY NPM: publish-branch=main",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering filters out pnpm-specific hoisting properties 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "; UNSUPPORTED BY NPM: hoist=false",
  "; UNSUPPORTED BY NPM: hoist-pattern[]=*eslint*",
  "; UNSUPPORTED BY NPM: public-hoist-pattern[]=",
  "; UNSUPPORTED BY NPM: shamefully-hoist=true",
  "always-auth=false",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering preserves registry-scoped auth tokens 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}",
  "//my-registry.com/:_authToken=\${MY_TOKEN}",
  "; UNSUPPORTED BY NPM: email=test@example.com",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering preserves registry-scoped configurations 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "//registry.npmjs.org/:always-auth=true",
  "//my-registry.com/:_authToken=\${MY_TOKEN}",
  "; UNSUPPORTED BY NPM: hoist=false",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With npm-incompatible properties filtering preserves standard npm properties 1`] = `
Array [
  "registry=https://registry.npmjs.org/",
  "always-auth=false",
  "strict-ssl=true",
  "save-exact=true",
  "package-lock=true",
  "; UNSUPPORTED BY NPM: hoist=false",
  "; UNSUPPORTED BY NPM: email=test@example.com",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 1`] = `
Array [
  "var1=\${foo-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 2`] = `
Array [
  "var1=\${foo-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 3`] = `
Array [
  "var1=\${foo:-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 4`] = `
Array [
  "var1=\${foo:-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 5`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 6`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 7`] = `
Array [
  "var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable with a fallback 8`] = `
Array [
  "var1=\${foo:-fallback_value}-\${bar-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable without a fallback 1`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports a variable without a fallback 2`] = `
Array [
  "var1=\${foo}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports malformed lines 1`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo_fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports malformed lines 2`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports malformed lines 3`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:_fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports malformed lines 4`] = `
Array [
  "var1=\${foo",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports multiple lines 1`] = `
Array [
  "var1=\${foo}",
  "; MISSING ENVIRONMENT VARIABLE: var2=\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports multiple lines 2`] = `
Array [
  "var1=\${foo}",
  "var2=\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports multiple lines 3`] = `
Array [
  "var1=\${foo}",
  "var2=\${bar-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines With support for env var fallback syntax supports multiple lines 4`] = `
Array [
  "var1=\${foo:-fallback_value}",
  "var2=\${bar-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 1`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 2`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 3`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 4`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 5`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 6`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 7`] = `
Array [
  "var1=\${foo}-\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable with a fallback 8`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:-fallback_value}-\${bar-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable without a fallback 1`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports a variable without a fallback 2`] = `
Array [
  "var1=\${foo}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports malformed lines 1`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo_fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports malformed lines 2`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports malformed lines 3`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:_fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports malformed lines 4`] = `
Array [
  "var1=\${foo",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports multiple lines 1`] = `
Array [
  "var1=\${foo}",
  "; MISSING ENVIRONMENT VARIABLE: var2=\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports multiple lines 2`] = `
Array [
  "var1=\${foo}",
  "var2=\${bar}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports multiple lines 3`] = `
Array [
  "var1=\${foo}",
  "; MISSING ENVIRONMENT VARIABLE: var2=\${bar-fallback_value}",
]
`;

exports[`npmrcUtilities trimNpmrcFileLines Without support for env var fallback syntax supports multiple lines 4`] = `
Array [
  "; MISSING ENVIRONMENT VARIABLE: var1=\${foo:-fallback_value}",
  "; MISSING ENVIRONMENT VARIABLE: var2=\${bar-fallback_value}",
]
`;
